[gd_scene load_steps=2 format=3 uid="uid://bv0wgcrvsab1p"]

[ext_resource type="Script" uid="uid://ce12qei8h1nvo" path="res://nodes/levels/mask_node.gd" id="1_8rwv5"]

[node name="MaskNode" type="Node2D"]
script = ExtResource("1_8rwv5")

[node name="MaskViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
canvas_cull_mask = 2
size = Vector2i(1020, 853)

[node name="MaskCamera" type="Camera2D" parent="MaskViewport"]
